--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+title: Luca Moiana
+email: luca_moiana@hotmail.com  
+description: "This is just a test page for my awesome BLOG."
 baseurl: ""
-url: "http://yourdomain.com"
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://lucamoiana.github.io"
+twitter_username: lucamoiana
+github_username:  lucamoiana
 
 # Build settings
 markdown: kramdown
