--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 # Site settings
 title: luca moiana
-description: "My personal page for coding project on GIS, MAPS and WEBMAPS"
+description: "My personal page for coding projects on gis, webmaps using leafletjs or openlayers"
 baseurl: ""
 url: "http://yourdomain.com"
 
@@ -25,48 +25,84 @@ colors:  #in hex code if not noted else
 
 # Social networks usernames. Many more available: google-plus, flickr, linkedin, etc). Shown in footer.
 social:
+  - title: dribbble
+    url:
   - title: facebook
-    url: https://www.facebook.com/lmoiana
+    url:
   - title: twitter
-    url: https://twitter.com/lucamoiana
+    url: 
   - title: instagram
-    url: http://instagram.com/luca_moiana
-
+    url: 
+  - title: tumblr
+    url: 
     
 # Postal address (add as many lines as necessary). Shown in footer and on Contact page.
 address:
-  - lines: ,
-    - Rome,
-    - Italy.
-email: luca_moiana@hotmail.com
-skype: lucamoiana
+  - lines: 
+    - Some Ave, 987,
+    - 23890, New York,
+    - United States.
+email: hello@solidtheme.com
+tel: +34 8493-4893
 
 
 ### GENERAL DATA FOR VARIOUS LOCATIONS ###
     
 # Members information. Shown on About page.
-# members:
-#  - name: Mark Webber
-#    position: CEO
-#    text: Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-#    img: team01.jpg
-#    social:
-#      - title: envelope #use for email address
-#        url: mailto:name@domain.com
-#      - title: twitter
-#        url: http://twitter.com/handle
-
+members:
+  - name: Mark Webber
+    position: CEO
+    text: Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+    img: team01.jpg
+    social:
+      - title: envelope #use for email address
+        url: mailto:name@domain.com
+      - title: twitter
+        url: http://twitter.com/handle
+  - name: Paul Jameson
+    position: Lead Designer
+    text: Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+    img: team02.jpg
+    social:
+      - title: envelope #use for email address
+        url: mailto:name@domain.com
+      - title: twitter
+        url: http://twitter.com/handle
+  - name: Laura Sommers
+    position: Lead Developer
+    text: Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+    img: team03.jpg
+    social:
+      - title: envelope #use for email address
+        url: mailto:name@domain.com
+      - title: twitter
+        url: http://twitter.com/handle
+  - name: Martin Blunt
+    position: Marketing
+    text: Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+    img: team04.jpg
+    social:
+      - title: envelope #use for email address
+        url: mailto:name@domain.com
+      - title: twitter
+        url: http://twitter.com/handle
     
 # Clients information. Shown on Home and About pages.
-#clients:
- # - name: dribbble
- #   img: client01.png
+clients:
+  - name: dribbble
+    img: client01.png
+  - name: Code is Poetry
+    img: client02.png
+  - name: Vimeo
+    img: client03.png
+  - name: VimeoPro
+    img: client04.png
     
 # Short text about your company. Shown in footer on every page and also separately on Home and Contact page.
-about: "GIS is the solution"
+about: "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s."
 
 # Testimonial content. Shown on Home and About page. 
-#testimonial:
-#    message: "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged."
-#    author: Marcel Newman
-#    position: WEB DESIGNER - BLACKTIE.CO
+testimonial:
+    message: "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged."
+    author: Marcel Newman
+    position: WEB DESIGNER - BLACKTIE.CO
