aggiornato social eliminato

--- a/_config.yml
+++ b/_config.yml
@@ -25,10 +25,8 @@ colors:  #in hex code if not noted else
 
 # Social networks usernames. Many more available: google-plus, flickr, linkedin, etc). Shown in footer.
 social:
-  - title: dribbble
-    url: lucamoiana
   - title: facebook
-    url: lucamoiana
+    url: https://www.facebook.com/lmoiana
   - title: twitter
     url: lucamoiana
   - title: instagram
