deleted soma social

--- a/_config.yml
+++ b/_config.yml
@@ -28,11 +28,9 @@ social:
   - title: facebook
     url: https://www.facebook.com/lmoiana
   - title: twitter
-    url: lucamoiana
+    url: http://twitter.com/lucamoiana
   - title: instagram
-    url: lucamoiana
-  - title: tumblr
-    url: lucamoiana
+    url: http://instagram.com/luca_moiana
     
 # Postal address (add as many lines as necessary). Shown in footer and on Contact page.
 address:
