--- a/_config.yml
+++ b/_config.yml
@@ -35,11 +35,10 @@ social:
 # Postal address (add as many lines as necessary). Shown in footer and on Contact page.
 address:
   - lines: 
-    - Some Ave, 987,
-    - 23890, New York,
-    - United States.
-email: hello@solidtheme.com
-tel: +34 8493-4893
+    - Roma,
+    - Italy.
+email: luca_moiana@hotmail.com
+skype: lucamoiana
 
 
 ### GENERAL DATA FOR VARIOUS LOCATIONS ###
